--- a/src/scss/base/_tipografia.scss
+++ b/src/scss/base/_tipografia.scss
@@ -14,8 +14,10 @@ h2{
 
 [class$="__heading"] {
     font-family: v.$fuenteHeading;
+    text-align: center;
 }
 
 [class$="__span"] {
     color: v.$primario;
+    font-weight: v.$bold;
 }
