--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -44,7 +44,12 @@
         color: v.$blanco;
 
         &:hover {
-            color: darken(v.$blanco, $amount: 20);
+            color: v.$primario;
+        }
+
+        &--actual {
+            color: v.$primario;
+            font-weight: v.$bold;
         }
     }
 
@@ -69,7 +74,9 @@
 
     /* lo mando a llamar desde app.js */
     &--moved {
-        background-color: rgb(0 0 0 / 0.75);
+        @include m.tablet {
+            background-color: rgb(0 0 0 / 0.75);
+        }
         padding: 3rem;
     }
 }
