--- a/src/scss/layout/_hero.scss
+++ b/src/scss/layout/_hero.scss
@@ -18,6 +18,10 @@
         color: v.$blanco;
         @include m.contenedor-md;
     }
+
+    &__descripcion {
+        text-align: center;
+    }
 }
 
 /* En este caso la imagen ya es oscura */
