--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -40,7 +40,11 @@
     }
 
     &__mensaje {
-        text-align: center
+        display: none;
+        @include m.tablet {
+            display: block;
+            text-align: center
+        }
     }
 
     &__boton {
