--- a/src/scss/components/_galeria.scss
+++ b/src/scss/components/_galeria.scss
@@ -4,7 +4,7 @@
 .galeria {
 
     /* contenedor general */
-    .galeria__contenedor {
+    &__contenedor {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(3, 300px);
